[package]
name = "cs-music-control"
authors = ["Christoph Wiese"]
description = "Automatically play/pause music between Counter-Strike rounds"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/WieseChristoph/cs-music-control"
repository = "https://github.com/WieseChristoph/cs-music-control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
enigo = "0.1.3"
indoc = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
